sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/Reporting_Snapshot__c.object-meta.xml
<CustomObject>
    <description>LEM-13135, stores data from snapshot reporting</description>
    <label>Reporting Snapshot</label>
    <nameField>
        <displayFormat>ReportingSnapshot-{00000}</displayFormat>
        <label>Reporting Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>