sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-13135</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>