sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/fields/Child_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Child_Work_Order__c</fullName>
    <description>LEM-13135</description>
    <label>Child Work Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>