sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <inlineHelpText>LEM-13135</inlineHelpText>
    <label>Parent Work Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>