sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/fields/Readiness_Check_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Check_Error_Message__c</fullName>
    <description>LEM-13135</description>
    <label>Readiness Check Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>