sfdx-source/force-app/main/default/objects/Reporting_Snapshot__c/fields/Readiness_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Check_Status__c</fullName>
    <description>LEM-13135</description>
    <label>Readiness Check Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>